--- a/css/over_mijzelf.css
+++ b/css/over_mijzelf.css
@@ -1,5 +1,5 @@
 /*variabelen*/
-/* line 7, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+/* line 7, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 header {
   background-image: url(../afbeeldingen/antarctica.JPG);
   height: 200px;
@@ -9,13 +9,13 @@ header {
   font-weight: 600;
   color: white;
   text-align: right; }
-  /* line 16, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 16, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   header #intro {
     margin-left: 200px;
     margin-right: 10px;
     padding-top: 45px; }
 
-/* line 23, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+/* line 23, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 nav {
   width: 100%;
   font-weight: 600;
@@ -24,70 +24,96 @@ nav {
   top: 0px;
   z-index: 1;
   font-size: 0.78em; }
-  /* line 31, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 31, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav img {
     float: right; }
-  /* line 34, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 34, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav li {
     border-bottom: 1px solid #eee;
     margin-right: 30px;
     margin-bottom: 5px;
     padding-top: 5px;
     padding-bottom: 5px; }
-  /* line 42, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 42, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav li:first-child {
     padding-top: 5px; }
-  /* line 45, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 45, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav li:last-child {
     border-bottom: 0; }
-  /* line 48, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 48, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav a:hover {
     color: lightblue; }
-  /* line 51, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 51, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav ul {
     background-color: rgba(255, 0, 0, 0.4);
     display: none;
     margin-right: 50px;
     width: 100%; }
-  /* line 58, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 58, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav:hover ul {
     display: block;
     text-align: right; }
-  /* line 62, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 62, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav li a {
     display: block;
     text-decoration: none;
     margin-right: 20px;
     color: white; }
-  /* line 70, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 70, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav a:hover {
     -moz-transition: opacity .8s ease-in;
     -webkit-transition: opacity .8s ease-in;
     transition: opacity .8s ease-in; }
 
-/* line 81, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+/* line 78, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+#omschrijving {
+  font-size: 0.78em; }
+
+/* line 82, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+#landschap,
+#logo,
+#stad,
+#poster {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%; }
+
+/* line 91, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+#compositie {
+  max-width: 70%;
+  margin: 0 auto;
+  display: block; }
+
+/* line 97, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+#foto {
+  position: relative;
+  max-width: 20%;
+  float: right;
+  margin-bottom: -12%; }
+
+/* line 104, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 html {
   font-family: "Ubuntu", sans-serif;
   font-size: 0.78em; }
-  /* line 84, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 107, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html .content {
     padding: 20px; }
-  /* line 87, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 110, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html h2 {
     font-size: 1.17em;
     text-decoration: underline;
     margin-bottom: 2px; }
-  /* line 93, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 116, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html .over_mezelf p:first-of-type {
     margin-bottom: 0px; }
-  /* line 96, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 119, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html .over_mezelf ul li:last-of-type {
     margin-bottom: 5px; }
-  /* line 100, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 123, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html p {
     margin-bottom: 10px; }
 
-/* line 105, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+/* line 128, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 footer {
   text-align: center;
   background-color: rgba(255, 0, 0, 0.7);
@@ -97,80 +123,143 @@ footer {
   padding-top: 10px; }
 
 @media screen and (min-width: 480px) {
-  /* line 115, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 138, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   header {
     height: 400px;
     font-size: 1.3em; }
-    /* line 118, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+    /* line 141, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     header #intro {
       padding-top: 90px;
       padding-left: 140px;
       padding-right: 20px; }
-  /* line 124, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 147, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #omschrijving {
+    font-size: 0.78em;
+    margin-top: 10%; }
+  /* line 151, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #landschap,
+  #logo,
+  #stad,
+  #poster {
+    float: left;
+    max-width: 50%;
+    margin-right: 5%;
+    padding-bottom: 10px; }
+  /* line 161, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #compositie {
+    max-width: 40%;
+    margin-left: 5%;
+    float: left; }
+  /* line 166, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #opdracht {
+    width: 100%;
+    overflow: auto;
+    border-bottom: 2px solid rgba(255, 0, 0, 0.5); }
+  /* line 171, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #foto {
+    margin-right: 48%;
+    max-width: 13%;
+    padding-top: 20px; }
+  /* line 176, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #landschap,
+  #poster {
+    padding-top: 20px; }
+  /* line 180, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #stad {
+    padding-top: 10px; }
+  /* line 183, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav {
     position: fixed;
     top: 0px;
     margin-top: 0px;
     font-size: 1.3em;
     margin-right: 30px; }
-    /* line 127, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+    /* line 186, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     nav img {
       display: none; }
-    /* line 133, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+    /* line 192, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     nav ul li {
       padding-right: 20px; }
-    /* line 136, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+    /* line 195, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     nav ul {
+      padding-top: 5px;
+      padding-bottom: 5px;
       display: block; }
-    /* line 139, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+    /* line 200, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     nav li {
       display: inline-block; }
-      /* line 141, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+      /* line 202, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
       nav li:last-child {
         border-bottom: 1px solid #eee; }
-    /* line 145, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+    /* line 206, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     nav:hover ul {
       display: block;
       text-align: left;
       color: black; }
-  /* line 151, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 212, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html .content {
     margin-left: 30px;
     margin-right: 30px; }
-  /* line 155, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 216, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   footer {
     font-size: 1.04em; } }
 
 @media screen and (min-width: 800px) {
-  /* line 161, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 222, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   header {
     height: 500px; }
-    /* line 163, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+    /* line 224, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     header #intro {
       padding-left: 280px;
       padding-top: 90px;
-      padding-right: 30px; } }
+      padding-right: 30px; }
+  /* line 230, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #omschrijving {
+    font-size: 0.91em; }
+  /* line 233, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  p,
+  ul {
+    font-size: 1.17em; }
+  /* line 237, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #introPort,
+  .about_me,
+  .future {
+    max-width: 500px;
+    padding-left: 10%; }
+  /* line 243, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  ul li {
+    margin-bottom: 5px; } }
 
 @media screen and (min-width: 900px) {
-  /* line 173, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 249, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   header {
     height: 600px; }
-    /* line 175, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+    /* line 251, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     header #intro {
       padding-right: 40px;
       padding-left: 350px;
       padding-top: 180px; }
-  /* line 182, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 257, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #introPort,
+  .about_me,
+  .future {
+    max-width: 700px; }
+  /* line 262, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #omschrijving {
+    font-size: 1.04em;
+    margin-top: 150px;
+    margin-right: 50px; }
+  /* line 267, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html .content {
     margin-left: 50px;
     margin-right: 50px; } }
 
 @media screen and (min-width: 1000px) {
-  /* line 189, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/overMijzelf.scss */
+  /* line 276, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   header {
     height: 700px;
-    font-size: 1.56em;
+    font-size: 1.2 1.3em;
     padding-left: 225px;
     padding-right: 45px; } }
 
-/*# sourceMappingURL=overMijzelf.css.map */
+/*# sourceMappingURL=over_mijzelf.css.map */
