--- a/css/over_mijzelf.scss
+++ b/css/over_mijzelf.scss
@@ -73,9 +73,32 @@ nav {
             transition: opacity .8s ease-in;
         }
     }
+}
 
+#omschrijving {
+    font-size: 0.6*$fontsize
+}
 
+#landschap,
+#logo,
+#stad,
+#poster {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+}
 
+#compositie {
+    max-width: 70%;
+    margin: 0 auto;
+    display: block;
+}
+
+#foto {
+    position: relative;
+    max-width: 20%;
+    float: right;
+    margin-bottom: -12%
 }
 
 html {
@@ -121,6 +144,42 @@ footer {
             padding-right: 20px;
         }
     }
+    #omschrijving {
+        font-size: 0.6*$fontsize;
+        margin-top: 10%;
+    }
+    #landschap,
+    #logo,
+    #stad,
+    #poster {
+        float: left;
+        max-width: 50%;
+        margin-right: 5%;
+        padding-bottom: 10px
+    }
+
+    #compositie {
+        max-width: 40%;
+        margin-left: 5%;
+        float: left;
+    }
+    #opdracht {
+        width: 100%;
+        overflow: auto;
+        border-bottom: 2px solid rgba(255, 0, 0, 0.5);
+    }
+    #foto {
+        margin-right: 48%;
+        max-width: 13%;
+        padding-top: 20px;
+    }
+    #landschap,
+    #poster {
+        padding-top: 20px;
+    }
+    #stad {
+        padding-top: 10px
+    }
     nav {
         position: fixed;
         top: 0px;
@@ -134,6 +193,8 @@ footer {
             padding-right: 20px
         }
         ul {
+            padding-top: 5px;
+            padding-bottom: 5px;
             display: block;
         }
         li {
@@ -166,7 +227,22 @@ footer {
             padding-right: 30px
         }
     }
-
+    #omschrijving {
+        font-size: 0.7*$fontsize;
+    }
+    p,
+    ul {
+        font-size: 0.9*$fontsize
+    }
+    #introPort,
+    .about_me,
+    .future, #portfolio {
+        max-width: 500px;
+        padding-left: 10%;
+    }
+    ul li {
+        margin-bottom: 5px
+    }
 }
 
 @media screen and (min-width:900px) {
@@ -178,19 +254,29 @@ footer {
             padding-top: 180px;
         }
     }
-
+    #introPort,
+    .about_me,
+    .future {
+        max-width: 700px;
+    }
+    #omschrijving {
+        font-size: 0.8*$fontsize;
+        margin-top: 150px;
+        margin-right: 50px;
+    }
     html .content {
         margin-left: 50px;
         margin-right: 50px;
     }
+
+
 }
 
 @media screen and (min-width:1000px) {
     header {
         height: 700px;
-        font-size: 1.2*$fontsize;
+        font-size: 1.2$fontsize;
         padding-left: 225px;
         padding-right: 45px;
     }
-
 }
