--- a/css/over_mijzelf.css
+++ b/css/over_mijzelf.css
@@ -223,39 +223,40 @@ footer {
   /* line 237, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #introPort,
   .about_me,
-  .future {
+  .future,
+  #portfolio {
     max-width: 500px;
     padding-left: 10%; }
-  /* line 243, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 244, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   ul li {
     margin-bottom: 5px; } }
 
 @media screen and (min-width: 900px) {
-  /* line 249, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 251, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   header {
     height: 600px; }
-    /* line 251, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    /* line 253, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     header #intro {
       padding-right: 40px;
       padding-left: 350px;
       padding-top: 180px; }
-  /* line 257, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 259, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #introPort,
   .about_me,
   .future {
     max-width: 700px; }
-  /* line 262, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 264, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #omschrijving {
     font-size: 1.04em;
     margin-top: 150px;
     margin-right: 50px; }
-  /* line 267, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 269, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html .content {
     margin-left: 50px;
     margin-right: 50px; } }
 
 @media screen and (min-width: 1000px) {
-  /* line 276, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 278, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   header {
     height: 700px;
     font-size: 1.2 1.3em;
