--- a/css/over_mijzelf.css
+++ b/css/over_mijzelf.css
@@ -4,18 +4,28 @@ header {
   background-image: url(../afbeeldingen/antarctica.JPG);
   height: 200px;
   background-size: cover;
+  margin-top: -45px;
   font-family: "Ubuntu", sans-serif;
   font-size: 0.715em;
-  font-weight: 600;
+  font-weight: 400;
   color: white;
   text-align: right; }
-  /* line 16, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 17, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  header strong {
+    font-weight: bolder; }
+  /* line 20, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   header #intro {
     margin-left: 200px;
     margin-right: 10px;
-    padding-top: 45px; }
+    padding-top: 45px;
+    margin-top: 45px; }
+    /* line 25, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    header #intro p {
+      background-color: rgba(0, 0, 0, 0.6);
+      box-shadow: 0px 0px 30px black;
+      padding: 10px; }
 
-/* line 23, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+/* line 34, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 nav {
   width: 100%;
   font-weight: 600;
@@ -24,52 +34,52 @@ nav {
   top: 0px;
   z-index: 1;
   font-size: 0.78em; }
-  /* line 31, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 42, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav img {
     float: right; }
-  /* line 34, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 45, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav li {
     border-bottom: 1px solid #eee;
     margin-right: 30px;
     margin-bottom: 5px;
     padding-top: 5px;
     padding-bottom: 5px; }
-  /* line 42, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 53, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav li:first-child {
     padding-top: 5px; }
-  /* line 45, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 56, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav li:last-child {
     border-bottom: 0; }
-  /* line 48, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 59, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav a:hover {
     color: lightblue; }
-  /* line 51, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 62, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav ul {
     background-color: rgba(255, 0, 0, 0.4);
     display: none;
     margin-right: 50px;
     width: 100%; }
-  /* line 58, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 69, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav:hover ul {
     display: block;
     text-align: right; }
-  /* line 62, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 73, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav li a {
     display: block;
     text-decoration: none;
     margin-right: 20px;
     color: white; }
-  /* line 70, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 81, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav a:hover {
     -moz-transition: opacity .8s ease-in;
     -webkit-transition: opacity .8s ease-in;
     transition: opacity .8s ease-in; }
 
-/* line 78, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+/* line 89, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 #omschrijving {
   font-size: 0.78em; }
 
-/* line 82, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+/* line 93, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 #landschap,
 #logo,
 #stad,
@@ -78,65 +88,66 @@ nav {
   margin: 0 auto;
   max-width: 100%; }
 
-/* line 91, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+/* line 102, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 #compositie {
   max-width: 70%;
   margin: 0 auto;
   display: block; }
 
-/* line 97, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+/* line 108, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 #foto {
   position: relative;
   max-width: 20%;
   float: right;
   margin-bottom: -12%; }
 
-/* line 104, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+/* line 115, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 html {
   font-family: "Ubuntu", sans-serif;
   font-size: 0.78em; }
-  /* line 107, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 118, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html .content {
     padding: 20px; }
-  /* line 110, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 121, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html h2 {
     font-size: 1.17em;
     text-decoration: underline;
     margin-bottom: 2px; }
-  /* line 116, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 127, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html .over_mezelf p:first-of-type {
     margin-bottom: 0px; }
-  /* line 119, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 130, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html .over_mezelf ul li:last-of-type {
     margin-bottom: 5px; }
-  /* line 123, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 134, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html p {
     margin-bottom: 10px; }
 
-/* line 128, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+/* line 139, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 footer {
+  padding-left: 50px;
   text-align: center;
   background-color: rgba(255, 0, 0, 0.7);
   color: white;
   font-size: 0.78em;
   padding-bottom: 5px;
-  padding-top: 10px; }
+  padding-top: 5px; }
 
 @media screen and (min-width: 480px) {
-  /* line 138, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 150, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   header {
     height: 400px;
     font-size: 1.3em; }
-    /* line 141, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    /* line 153, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     header #intro {
       padding-top: 90px;
       padding-left: 140px;
       padding-right: 20px; }
-  /* line 147, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 159, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #omschrijving {
     font-size: 0.78em;
     margin-top: 10%; }
-  /* line 151, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 163, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #landschap,
   #logo,
   #stad,
@@ -145,118 +156,118 @@ footer {
     max-width: 50%;
     margin-right: 5%;
     padding-bottom: 10px; }
-  /* line 161, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 173, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #compositie {
     max-width: 40%;
     margin-left: 5%;
     float: left; }
-  /* line 166, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 178, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #opdracht {
     width: 100%;
     overflow: auto;
     border-bottom: 2px solid rgba(255, 0, 0, 0.5); }
-  /* line 171, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 183, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #foto {
     margin-right: 48%;
     max-width: 13%;
     padding-top: 20px; }
-  /* line 176, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 188, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #landschap,
   #poster {
     padding-top: 20px; }
-  /* line 180, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 192, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #stad {
     padding-top: 10px; }
-  /* line 183, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 195, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav {
     position: fixed;
     top: 0px;
     margin-top: 0px;
     font-size: 1.3em;
     margin-right: 30px; }
-    /* line 186, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    /* line 198, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     nav img {
       display: none; }
-    /* line 192, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    /* line 204, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     nav ul li {
       padding-right: 20px; }
-    /* line 195, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    /* line 207, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     nav ul {
       padding-top: 5px;
       padding-bottom: 5px;
       display: block; }
-    /* line 200, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    /* line 212, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     nav li {
       display: inline-block; }
-      /* line 202, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+      /* line 214, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
       nav li:last-child {
         border-bottom: 1px solid #eee; }
-    /* line 206, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    /* line 218, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     nav:hover ul {
       display: block;
       text-align: left;
       color: black; }
-  /* line 212, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 224, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html .content {
     margin-left: 30px;
     margin-right: 30px; }
-  /* line 216, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 228, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   footer {
     font-size: 1.04em; } }
 
 @media screen and (min-width: 800px) {
-  /* line 222, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 234, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   header {
     height: 500px; }
-    /* line 224, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    /* line 236, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     header #intro {
       padding-left: 280px;
       padding-top: 90px;
       padding-right: 30px; }
-  /* line 230, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 242, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #omschrijving {
     font-size: 0.91em; }
-  /* line 233, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 245, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   p,
   ul {
     font-size: 1.17em; }
-  /* line 237, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 249, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #introPort,
   .about_me,
   .future,
   #portfolio {
     max-width: 500px;
     padding-left: 10%; }
-  /* line 244, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 256, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   ul li {
     margin-bottom: 5px; } }
 
 @media screen and (min-width: 900px) {
-  /* line 251, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 263, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   header {
     height: 600px; }
-    /* line 253, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    /* line 265, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     header #intro {
       padding-right: 40px;
-      padding-left: 350px;
+      padding-left: 330px;
       padding-top: 180px; }
-  /* line 259, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 271, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #introPort,
   .about_me,
   .future {
     max-width: 700px; }
-  /* line 264, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 276, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #omschrijving {
     font-size: 1.04em;
     margin-top: 150px;
     margin-right: 50px; }
-  /* line 269, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 281, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html .content {
     margin-left: 50px;
     margin-right: 50px; } }
 
 @media screen and (min-width: 1000px) {
-  /* line 278, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 290, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   header {
     height: 700px;
     font-size: 1.2 1.3em;
