--- a/css/over_mijzelf.scss
+++ b/css/over_mijzelf.scss
@@ -8,16 +8,27 @@ header {
     background-image: url(../afbeeldingen/antarctica.JPG);
     height: 200px;
     background-size: cover;
+    margin-top: -45px;
     font-family: $font;
     font-size: 0.55*$fontsize;
-    font-weight: 600;
+    font-weight: 400;
     color: white;
     text-align: right;
+    strong {
+        font-weight: bolder;
+    }
     #intro {
         margin-left: 200px;
         margin-right: 10px;
         padding-top: 45px;
+        margin-top: 45px;
+        p {
+            background-color: rgba(0, 0, 0, 0.6);
+            box-shadow: 0px 0px 30px black;
+            padding: 10px;
+        }
     }
+
 }
 
 nav {
@@ -126,12 +137,13 @@ html {
 }
 
 footer {
+    padding-left: 50px;
     text-align: center;
     background-color: rgba(255, 0, 0, 0.7);
     color: white;
     font-size: 0.6*$fontsize;
     padding-bottom: 5px;
-    padding-top: 10px;
+    padding-top: 5px;
 }
 
 @media screen and (min-width:480px) {
@@ -252,7 +264,7 @@ footer {
         height: 600px;
         #intro {
             padding-right: 40px;
-            padding-left: 350px;
+            padding-left: 330px;
             padding-top: 180px;
         }
     }
