--- a/css/over_mijzelf.css
+++ b/css/over_mijzelf.css
@@ -15,7 +15,7 @@ header {
     font-weight: bolder; }
   /* line 20, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   header #intro {
-    margin-left: 200px;
+    margin-left: 50%;
     margin-right: 10px;
     padding-top: 45px;
     margin-top: 45px; }
@@ -27,127 +27,162 @@ header {
 
 /* line 34, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 nav {
-  width: 100%;
+  width: 120%;
+  left: 0;
   font-weight: 600;
   display: block;
   position: fixed;
   top: 0px;
   z-index: 1;
   font-size: 0.78em; }
-  /* line 42, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 43, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav img {
-    float: right; }
-  /* line 45, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    right: 0;
+    float: right;
+    margin-right: 19%;
+    margin-top: 5px; }
+  /* line 49, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav li {
     border-bottom: 1px solid #eee;
-    margin-right: 30px;
+    margin-right: 90px;
     margin-bottom: 5px;
-    padding-top: 5px;
+    padding-top: 15px;
     padding-bottom: 5px; }
-  /* line 53, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 57, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav li:first-child {
-    padding-top: 5px; }
-  /* line 56, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    padding-top: 15px; }
+  /* line 60, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav li:last-child {
     border-bottom: 0; }
-  /* line 59, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 63, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav a:hover {
     color: lightblue; }
-  /* line 62, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 66, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav ul {
-    background-color: rgba(255, 0, 0, 0.4);
+    background-color: #ff5a5a;
     display: none;
     margin-right: 50px;
     width: 100%; }
-  /* line 69, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 73, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav:hover ul {
     display: block;
     text-align: right; }
-  /* line 73, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 77, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav li a {
     display: block;
     text-decoration: none;
     margin-right: 20px;
     color: white; }
-  /* line 81, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 85, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav a:hover {
     -moz-transition: opacity .8s ease-in;
     -webkit-transition: opacity .8s ease-in;
     transition: opacity .8s ease-in; }
 
-/* line 89, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
-#omschrijving {
+/* line 93, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+#about_me {
+  margin-top: 10px; }
+
+/* line 97, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+#omschrijving,
+#ssdOmschrijving {
   font-size: 0.78em; }
 
-/* line 93, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+/* line 102, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 #landschap,
 #logo,
 #stad,
 #poster {
   display: block;
   margin: 0 auto;
-  max-width: 100%; }
+  max-width: 100%;
+  padding-bottom: 10px; }
 
-/* line 102, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+/* line 112, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+#ssd {
+  max-width: 33.33333%; }
+
+/* line 116, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 #compositie {
   max-width: 70%;
   margin: 0 auto;
   display: block; }
 
-/* line 108, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+/* line 122, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 #foto {
   position: relative;
   max-width: 20%;
   float: right;
   margin-bottom: -12%; }
 
-/* line 115, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+/* line 129, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 html {
+  background-color: black;
+  max-width: 100%;
   font-family: "Ubuntu", sans-serif;
   font-size: 0.78em; }
-  /* line 118, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 134, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html .content {
     padding: 20px; }
-  /* line 121, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 137, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html h2 {
     font-size: 1.17em;
     text-decoration: underline;
     margin-bottom: 2px; }
-  /* line 127, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 143, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html .over_mezelf p:first-of-type {
     margin-bottom: 0px; }
-  /* line 130, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 146, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html .over_mezelf ul li:last-of-type {
     margin-bottom: 5px; }
-  /* line 134, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 150, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html p {
     margin-bottom: 10px; }
 
-/* line 139, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+/* line 155, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+.about_me ul {
+  margin-bottom: 10px; }
+
+/* line 159, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+body {
+  width: 80%;
+  margin: 0 auto;
+  background-color: white; }
+
+/* line 165, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 footer {
-  padding-left: 50px;
+  position: absolute;
+  width: 100%;
+  margin-left: -20%;
+  padding-left: 10%;
   text-align: center;
-  background-color: rgba(255, 0, 0, 0.7);
+  background-color: #ff5a5a;
   color: white;
   font-size: 0.78em;
   padding-bottom: 5px;
-  padding-top: 5px; }
+  padding-top: 10px; }
 
-@media screen and (min-width: 480px) {
-  /* line 150, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+@media screen and (min-width: 510px) {
+  /* line 180, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   header {
     height: 400px;
     font-size: 1.3em; }
-    /* line 153, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    /* line 183, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     header #intro {
-      padding-top: 90px;
-      padding-left: 140px;
-      padding-right: 20px; }
-  /* line 159, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+      padding-right: 20px;
+      padding-top: 20%; }
+  /* line 188, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #ssdOmschrijving,
   #omschrijving {
-    font-size: 0.78em;
-    margin-top: 10%; }
-  /* line 163, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    position: absolute;
+    font-size: 0.715em;
+    margin-top: 10px;
+    left: 55%;
+    width: 38%;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0px 0px 5px red; }
+  /* line 200, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #landschap,
   #logo,
   #stad,
@@ -156,122 +191,172 @@ footer {
     max-width: 50%;
     margin-right: 5%;
     padding-bottom: 10px; }
-  /* line 173, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 209, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #ssd {
+    margin-top: 90px;
+    margin-bottom: 90px;
+    display: inline-block;
+    max-width: 16.66666667%; }
+  /* line 215, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #ssdOmschrijving {
+    font-size: 0.78em;
+    margin-top: -210px; }
+  /* line 219, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #poster {
+    padding-bottom: 15px; }
+  /* line 222, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #compositie {
     max-width: 40%;
     margin-left: 5%;
     float: left; }
-  /* line 178, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 227, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #portfolio:before {
+    content: "";
+    display: block;
+    height: 60px;
+    margin: -60px 0 0; }
+  /* line 233, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #opdracht {
+    position: relative;
     width: 100%;
+    height: 100%;
     overflow: auto;
-    border-bottom: 2px solid rgba(255, 0, 0, 0.5); }
-  /* line 183, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    border-bottom: 2px solid #ff5a5a; }
+  /* line 241, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #foto {
     margin-right: 48%;
     max-width: 13%;
     padding-top: 20px; }
-  /* line 188, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 246, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #landschap,
   #poster {
     padding-top: 20px; }
-  /* line 192, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 250, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #landschap {
+    margin-bottom: 10px; }
+  /* line 253, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #stad {
     padding-top: 10px; }
-  /* line 195, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 256, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   nav {
     position: fixed;
     top: 0px;
     margin-top: 0px;
-    font-size: 1.3em;
-    margin-right: 30px; }
-    /* line 198, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    font-size: 1.3em; }
+    /* line 259, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     nav img {
       display: none; }
-    /* line 204, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    /* line 264, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     nav ul li {
       padding-right: 20px; }
-    /* line 207, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    /* line 267, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     nav ul {
       padding-top: 5px;
       padding-bottom: 5px;
       display: block; }
-    /* line 212, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    /* line 272, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     nav li {
       display: inline-block; }
-      /* line 214, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+      /* line 274, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
       nav li:last-child {
         border-bottom: 1px solid #eee; }
-    /* line 218, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    /* line 278, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     nav:hover ul {
       display: block;
       text-align: left;
       color: black; }
-  /* line 224, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 284, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html .content {
     margin-left: 30px;
     margin-right: 30px; }
-  /* line 228, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 288, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   footer {
     font-size: 1.04em; } }
 
 @media screen and (min-width: 800px) {
-  /* line 234, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 294, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   header {
     height: 500px; }
-    /* line 236, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    /* line 296, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     header #intro {
-      padding-left: 280px;
       padding-top: 90px;
       padding-right: 30px; }
-  /* line 242, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 302, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #omschrijving {
-    font-size: 0.91em; }
-  /* line 245, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    font-size: 0.91em;
+    line-height: 1.5;
+    margin-top: 40px; }
+  /* line 307, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #ssdOmschrijving {
+    font-size: 0.91em;
+    line-height: 1.5;
+    margin-top: -240px; }
+  /* line 312, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   p,
   ul {
     font-size: 1.17em; }
-  /* line 249, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 316, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #introPort,
   .about_me,
   .future,
   #portfolio {
     max-width: 500px;
     padding-left: 10%; }
-  /* line 256, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 323, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   ul li {
     margin-bottom: 5px; } }
 
 @media screen and (min-width: 900px) {
-  /* line 263, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 330, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   header {
     height: 600px; }
-    /* line 265, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    /* line 332, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
     header #intro {
       padding-right: 40px;
-      padding-left: 330px;
       padding-top: 180px; }
-  /* line 271, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 338, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #introPort,
   .about_me,
   .future {
     max-width: 700px; }
-  /* line 276, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 343, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   #omschrijving {
-    font-size: 1.04em;
-    margin-top: 150px;
-    margin-right: 50px; }
-  /* line 281, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+    font-size: 1.17em;
+    margin-right: 50px;
+    line-height: 1.4; }
+  /* line 348, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #ssdOmschrijving {
+    font-size: 1.17em;
+    line-height: 1.4;
+    margin-top: -290px; }
+  /* line 353, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #ssd {
+    margin-top: 120px;
+    margin-bottom: 120px; }
+  /* line 357, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   html .content {
     margin-left: 50px;
     margin-right: 50px; } }
 
 @media screen and (min-width: 1000px) {
-  /* line 290, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  /* line 366, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
   header {
     height: 700px;
     font-size: 1.2 1.3em;
     padding-left: 225px;
-    padding-right: 45px; } }
+    padding-right: 45px; }
+  /* line 372, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #omschrijving {
+    line-height: 2; }
+  /* line 375, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #ssdOmschrijving {
+    line-height: 2;
+    margin-top: -320px;
+    padding-bottom: 10px;
+    padding-top: 10px; }
+  /* line 381, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
+  #ssd {
+    margin-top: 100px;
+    margin-bottom: 100px; } }
 
 /*# sourceMappingURL=over_mijzelf.css.map */
