typfout en kleinere foto

--- a/css/over_mijzelf.css
+++ b/css/over_mijzelf.css
@@ -1,7 +1,7 @@
 /*variabelen*/
 /* line 7, C:/Users/lisav/Documents/GitHub/1718-nmd1/css/over_mijzelf.scss */
 header {
-  background-image: url(../afbeeldingen/antarctica.JPG);
+  background-image: url(../afbeeldingen/antarctica.png);
   height: 200px;
   background-size: cover;
   margin-top: -45px;
