--- a/css/over_mijzelf.scss
+++ b/css/over_mijzelf.scss
@@ -5,7 +5,7 @@ $font: 'Ubuntu',
 sans-serif;
 
 header {
-    background-image: url(../afbeeldingen/antarctica.JPG);
+    background-image: url(../afbeeldingen/antarctica.png);
     height: 200px;
     background-size: cover;
     margin-top: -45px;
